Separate_REST_Styles to prevent the table from stretching when the description is long. /cart

--- a/backend/src/main/resources/static/css/cart.css
+++ b/backend/src/main/resources/static/css/cart.css
@@ -127,6 +127,7 @@ h1 {
 /* === TABLE === */
 table {
     width: 100%;
+    table-layout: fixed;
     border-collapse: collapse;
     background: white;
     border-radius: 12px;
@@ -190,3 +191,14 @@ tfoot td {
         font-size: 12px;
     }
 }
+
+th, td {
+    padding: 12px;
+    font-size: 14px;
+    text-align: left;
+    vertical-align: middle;
+
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
